--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,5 +19,5 @@ phases:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker images...
-      - docker push 470727887694.dkr.ecr.us-east-2.amazonaws.com/chaitanya-demo/vamsi:latest
+      - docker push 470727887694.dkr.ecr.us-east-2.amazonaws.com/chaitanya-demo 470727887694.dkr.ecr.us-east-2.amazonaws.com/chaitanya-demo/vamsi:latest
       
